Add LogOut endpoint
